...
        It provides robust, professional functionality out of the box, \
        complete with **Apple CarPlay** support, making it the perfect foundation \
        for **building** or **customizing** your own streaming radio experience.
        """

        static let footerAuthors = "Fethi El Hassasna & Matt Fecher"
        static let footerCopyright = "Swift Radio"

        struct Sections {
            static let features = "Features"
            static let contact = "Contact"
            static let support = "Support"
            static let credits = "Credits"
...
