...
    case credits(title: String = "Contributors", subtitle: String? = "Special Thanks", owner: String, repo: String, icon: String? = nil)

    // External actions
    case link(title: String, subtitle: String? = nil, url: String, icon: String? = nil)
    case email(title: String = "Email", subtitle: String? = nil, address: String, icon: String? = nil)
    case rateApp(title: String = "Rate the App", appID: String, icon: String? = nil)
    case share(title: String = "Share the App", text: String, icon: String? = nil)

    // Display only
    case version(title: String = "App Version", icon: String? = nil)

    var title: String {
        switch self {
...
